--- a/css/tooplate-wave-cafe.css
+++ b/css/tooplate-wave-cafe.css
@@ -9,6 +9,27 @@ https://www.tooplate.com/view/2121-wave-cafe
 html { scroll-behavior: smooth; }
 
 body {
+
+
+     @media only screen and (max-width: 768px) {
+    .tm-list-item {
+        display: flex;
+        flex-direction: column; /* Stack the item name and price */
+        align-items: center;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+    .tm-list-item-name {
+        margin-bottom: 10px; /* Add space between the name and price */
+    }
+
+    .tm-list-item-price {
+        margin-top: 10px; /* Ensure there's some space above the price */
+    }
+}
+
+
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
