--- a/css/tooplate-wave-cafe.css
+++ b/css/tooplate-wave-cafe.css
@@ -15,7 +15,7 @@ body {
     .tm-list-item {
         display: flex;
         flex-direction: column; /* Stack the item name and price */
-        align-items: center;
+        align-items: flex-start;
         text-align: center;
         margin-bottom: 15px;
     }
@@ -187,8 +187,8 @@ h2 { margin-top: 0; }
 
 .tm-list-item-img {
     margin-right: 20px;
-    width: 160px;
-    height: 160px;
+    width: 100px;
+    height: 100px;
     background-color: #099;
 }
 
